<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp"
	            android:textSize="18sp"
	            android:text="@string/strHelp" />

	        <TextView
	            android:id="@+id/help_tv_developer"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp"
	            android:layout_marginBottom="30dp"
	            android:textSize="18sp"
	            android:text="@string/strDeveloper" />

	        <Button
	            android:layout_width="220dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_margin="5dp"
	            android:text="@string/strMailUs" />

	        <Button
	            android:layout_width="220dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_margin="5dp"
	            android:text="@string/strDonate" />

	        <Button
	            android:layout_width="220dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_margin="5dp"
	            android:text="@string/strMark" />
	    </LinearLayout>
	    
	</ScrollView>
	
</RelativeLayout>
